[gd_scene load_steps=14 format=2]

[ext_resource path="res://Images/untitled.png" type="Texture" id=1]
[ext_resource path="res://Fonts/MenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/MenuScript.gd" type="Script" id=3]
[ext_resource path="res://Fonts/GemunuLibre/GemunuLibre-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sounds/BtnClick.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/MenuSound.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 100
outline_size = 5
outline_color = Color( 1, 0.258824, 0.0862745, 1 )
font_data = ExtResource( 4 )

[node name="Menu" type="Node"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 878.008, 446.495 )
scale = Vector2( 0.962542, 0.972254 )
texture = ExtResource( 1 )

[node name="ButtonStart" type="Button" parent="Control"]
margin_left = 151.453
margin_top = 372.396
margin_right = 348.453
margin_bottom = 453.396
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="Control"]
margin_left = 151.453
margin_top = 493.271
margin_right = 348.453
margin_bottom = 574.271
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "EXIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = -14.77
margin_top = 11.9297
margin_right = 509.23
margin_bottom = 83.9297
custom_fonts/font = SubResource( 6 )
text = "F11/F - FullScreen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
margin_left = -19.0079
margin_top = 79.7353
margin_right = 504.992
margin_bottom = 151.735
custom_fonts/font = SubResource( 6 )
text = "W,A,S,D - Steering"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control"]
margin_left = -19.0079
margin_top = 152.052
margin_right = 504.992
margin_bottom = 224.052
custom_fonts/font = SubResource( 6 )
text = "F8 - Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
margin_left = 639.947
margin_right = 1208.95
margin_bottom = 152.0
custom_fonts/font = SubResource( 7 )
text = "Spanner Fever"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="focus_entered" from="Control/ButtonStart" to="." method="_on_ButtonStart_focus_entered"]
[connection signal="mouse_entered" from="Control/ButtonStart" to="." method="_on_ButtonStart_mouse_entered"]
[connection signal="pressed" from="Control/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="mouse_entered" from="Control/ButtonExit" to="." method="_on_ButtonExit_mouse_entered"]
[connection signal="pressed" from="Control/ButtonExit" to="." method="_on_ButtonExit_pressed"]
